# pardax

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  conftest.py  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  tests.yml
api/: index.html
docs/: api.md  extending.md  faq.md  guide.md  index.md
docs/tutorials/: bayes_ic_estimation.md  heat_equation.md  implicit_heat.md  spectral_burgers.md
extending/: index.html
faq/: index.html
guide/: index.html
pardax/: __init__.py  integrate.py  ivp.py  linalg.py  linearise.py  linsolve.py  roots.py  stepper.py  transform.py  type_aliases.py
pardax/rootfinders/: __init__.py  base.py  linear.py  newton.py
pardax/timesteppers/: __init__.py  base.py  explicit.py  imex.py  implicit.py
tests/: test_integrate.py  test_rootfinders.py  test_roots.py  test_stepper.py  test_timesteppers.py
tutorials/bayes_ic_estimation/: index.html
tutorials/implicit_heat/: index.html
tutorials/spectral_burgers/: index.html
