[project]
name = "pardax"
version = "0.1.3"
description = "JAX-native solver for initial value problems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.6",
    "jax>=0.4.13",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.5",
    "mkdocstrings-python>=2.0.3",
    "mypy>=1.19.1",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pardax*"]

[tool.ruff]
line-length = 79