[project]
name = "pardax"
version = "0.1.4"
description = "JAX-native solver for initial value problems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.6",
    "jax>=0.4.13",
    "jaxtyping>=0.2.34",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
]

[dependency-groups]
docs = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.5,<9.6",
    "mkdocstrings-python>=2.0.3",
]
test = [
    "beartype>=0.22.9",
    "coverage-badge>=1.1.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pardax*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["F722"]  # jaxtyping shape strings are falsely flagged as forward annotation syntax errors

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=pardax,beartype.beartype"
